# budget-helper

./: .env.backend.example  .env.frontend.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf
backend/: Dockerfile  Dockerfile.prod  README.md  configs.py  history_handler.py  main.py  pyproject.toml  pytest.ini
backend/api_layer/: app.py  dependencies.py  exceptions.py  middleware.py
backend/api_layer/routes/: auth.py  budgets.py  email.py  email_search.py  health.py  ml.py  root.py  settings.py  transactions.py
backend/business_layer/: README.md  metadata_finding_engine.py  ml_engine.py  ml_strategy_base.py  prediction_manager.py  pxblendsc_strategy.py  transaction_manager.py
backend/business_layer/pxblendsc_strategy/: README.md  __init__.py  bundle.py  constants.py  features.py  memory.py  models.py  pipeline.py  strategy.py  text_processing.py  thresholds.py  training.py  training_utils.py  utils.py
backend/models/: __init__.py  auth.py  email.py  history.py  ml.py  payee_location.py  settings.py
backend/resource_layer/budgeting_platform_access/: budgeting_platform_access.py  budgeting_platform_resource_strategy.py  ynab_api_client.py  ynab_resource_interface.py
backend/resource_layer/database_store_access/: database.py  database_resource_access.py  database_resource_strategy.py
backend/resource_layer/db/: schema.sql
backend/resource_layer/file_store_access/: file_store_resource_access.py  file_store_resource_strategy.py
backend/resource_layer/metadata_source_access/: email_platform_strategy.py  (+4 more)
(+152 files in other folders)
