[project]
name = "budget-helper-backend"
version = "0.1.0"
description = "Budget Helper Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.1",
    "asyncpg>=0.30.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "thrift>=0.21.0",
    "google-api-python-client>=2.179.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "requests>=2.32.4",
    "httpx>=0.28.1",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",
    "catboost>=1.2.8",
    "scikit-learn>=1.7.1",
    "lightgbm>=4.6.0",
    "xgboost>=3.0.4",
    "imbalanced-learn>=0.14.0",
    "threadpoolctl>=3.6.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.12.8",
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    "thrift_gen/",
    ".venv",
    ".llm/core/"
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "E402", # module-import-not-at-top-of-file
]
ignore = [
    "E501", # line too long, handled by formatter
    "B008", # Do not perform function call in argument defaults (FastAPI Depends/Query patterns)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
